# hootsweet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  get_tokens.py  pyproject.toml
.github/workflows/: hootsweet.pypi.yaml  hootsweet.yaml
docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst
hootsweet/: __init__.py  api.py  constants.py  exceptions.py  locale.py
tests/: test_api.py  test_exceptions.py  test_hootsweet.py  test_locale.py
