[tool.poetry]
name = "hootsweet"
version = "0.1.0"
description = "A python package for the HootSuite API."
authors = ["Ciaran McCormick <ciaran.mccormick@itoworld.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests= "^2.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.1.1"
pytest-socket = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
